methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:9: error: Unit does not take parameters
  dogHouse()
          ^MethodsDogHouse:16: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:22: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:32: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:42: error: Unit does not take parameters
		dogHouse();		
                        ^